# markright

./: .gitignore  Cargo.toml  README.md
document/: Cargo.toml
document/src/: capture.rs  format.rs  history.rs  lib.rs  op.rs  paragraph.rs
document/src/paragraph/: bullet.rs  indent.rs  list.rs  number.rs  spacing.rs  style.rs
examples/: editor.rs
examples/editor/: Cargo.toml  build.rs  icon.rs  main.rs  sample.mr  sample.txt  theme.rs  toolbar.rs
examples/editor/fonts/: icons.toml
examples/editor/src/: debug.rs  fonts.rs  icon.rs  main.rs  pull.rs  theme.rs  toolbar.rs
examples/textboxes/: Cargo.toml
examples/textboxes/fonts/: icons.toml
examples/textboxes/src/: function.rs  icon.rs  main.rs  workspace.rs
fonts/: icons.toml
gfonts/: Cargo.toml
gfonts/src/: cache.rs  catalog.rs  css.rs  error.rs  family.rs  fetch.rs  lib.rs
src/: content.rs  document.rs  editor.rs  highlight.rs  lib.rs  parse.rs  rich_editor.rs  shortcuts.rs  toolbar.rs  widget.rs
src/rich_editor/: action.rs  binding.rs  content.rs  cursor.rs  highlight.rs  style.rs  widget.rs
src/widget/: rich_editor.rs
src/widget/rich_editor/: action.rs  binding.rs  content.rs  cursor.rs  list.rs  operation.rs  style.rs
src/widget/rich_editor/operation/: edit.rs  format.rs
tests/: content_text.rs  format_round_trip.rs  list_cursor.rs  overlapping_format.rs  set_color.rs  set_font.rs  undo_redo.rs
