[workspace]
members = [".", "document", "examples/editor"]

[package]
name = "markright"
version = "0.1.0"
edition = "2024"

[dependencies]
iced_core = "0.15.0-dev"

[dev-dependencies]
iced = { version = "0.15.0-dev", features = ["advanced", "tokio"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[build-dependencies]
iced_lucide = { git = "https://github.com/A-Disruption/iced_lucide" }

[patch.crates-io]
iced = { git = "https://github.com/airstrike/iced.git", branch = "markright/format-size" }
iced_core = { git = "https://github.com/airstrike/iced.git", branch = "markright/format-size" }
iced_graphics = { git = "https://github.com/airstrike/iced.git", branch = "markright/format-size" }
iced_widget = { git = "https://github.com/airstrike/iced.git", branch = "markright/format-size" }
