[package]
name = "markright_gfonts"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.15.0-dev", features = ["advanced", "tokio"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
