[package]
name = "editor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "editor"

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu"]

[dependencies]
markright = { path = "../.." }
markright_gfonts = { path = "../../gfonts" }
iced = { version = "0.15.0-dev", features = ["advanced", "tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
iced_lucide = { git = "https://github.com/A-Disruption/iced_lucide" }
