[package]
name = "editor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "editor"

[features]
default = ["wgpu"]
wgpu = ["iced/wgpu"]

[dependencies]
markright = { path = "../.." }
fount = { path = "../../../fount" }
iced.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
iced_lucide = { git = "https://github.com/airstrike/iced_lucide" }
